<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/check_milk"
            style="@style/CheckBoxStyle"
            android:text="@string/milk"/>

        <CheckBox
            android:id="@+id/check_sugar"
            style="@style/CheckBoxStyle"
            android:text="@string/sugar"/>

        <CheckBox
            android:id="@+id/check_cocoa"
            style="@style/CheckBoxStyle"
            android:text="@string/chocolate"/>

        <CheckBox
            android:id="@+id/check_cream"
            style="@style/CheckBoxStyle"
            android:text="@string/whipped_cream"/>

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_decrement"
                style="@style/ButtonSize"
                android:onClick="decrementQuantity"
                android:text="-"/>

            <TextView
                android:id="@+id/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/button_increment"
                style="@style/ButtonSize"
                android:onClick="incrementQuantity"
                android:text="+"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:onClick="placeOrder"
            android:text="@string/order"
            android:textColor="@color/colorText"/>

    </LinearLayout>
</ScrollView>